Feat: completed Descriptions

--- a/index.html
+++ b/index.html
@@ -36,50 +36,50 @@
     <t><b>Suicide rate as per data published by the World Health Organization (WHO)</b><br></t>
     <dl>
       <dt>&#128128;<p1 style = "color:red;"><b>Highest Suicide rate</b><br></p1></dt>
-      <dd><p2>&#9733;<mark class ="red">Guyana</mark> has the highest suicide rate which is <mark class ="red">30.2</mark>.<br></p2></dd>
+      <dd><p2>&#9733; <mark class ="red">Guyana</mark> has the highest suicide rate which is <mark class ="red">30.2</mark>.<br></p2></dd>
       <dt>&#128128;<p1 style = "color:green;"><b>Lowest Suicide rate</b><br></p1></dt>
-      <dd><p2>&#9733;<mark class ="green">Jamaica</mark> has the lowest suicide rate which is <mark class ="green">2</mark>.<br></p2></dd>
+      <dd><p2>&#9733; <mark class ="green">Jamaica</mark> has the lowest suicide rate which is <mark class ="green">2</mark>.<br></p2></dd>
       <dt>&#128128;<p1 style = "color:darkorchid;"><b>Summary</b><br></p1></dt>
       <dd><p2>Overall <mark class ="green">South America</mark> shows a lower suicide rate, where countries except <br>
         <mark class ="red">Guyana, Bolivia </mark> and <mark class ="red">Uruguay</mark> have a suicide rate below 10. The region with <br>
         the highest suicide rate is <mark class ="red">Russia</mark> and its nearby countries including <br>
         <mark class ="red">Belarus</mark> and <mark class ="red">Kazakhstan</mark>, with suicide rates over 20. <br></p2></dd>
     </dl>
-    
   </div>
 
-  <div class = "description4"><p>Descriptions for dot-plot.</p></div>
-  
+  <div class = "description4">
+    <t><b>Life expectancy</b><br></t>
+    <p2>Life expectancy is a statistical measure of the average (see below) time an organism is expected to live, based on the year of its birth, its current age, and other demographic factors including gender.</p2>
+    <dl>
+      <dt>&#23551; <p1 style = "color:red;"><b>Highest life expectancy</b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="red">Hong Kong</mark> has the highest life expectancy which is <mark class ="red">
+        84.7</mark>.<br></p2></dd>
+      <dt>&#23551; <p1 style = "color:green;"><b>Lowest life expectancy</b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="green">Central African Republic</mark> has the lowest life expectancy which is <mark class ="green">
+        52.8</mark>.<br></p2></dd>
+    </dl>
+  </div>
+
+  <!-- Dot plot -->
   <div class = "dotplot">
-    <div id="stacked_bar_chart"></div>
-      <script type="text/javascript">
-          var data_location = "data/COVID_19.csv"
-
-          // var spec2 = "js/stacked_bar_chart.vg.json";
-          var spec2 = "js/stacked_bar_chart.vg.json"
-
-          vegaEmbed('#stacked_bar_chart', spec2).then(function(result) {
-              // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-          }).catch(console.error);
-      </script>
   </div>
   
-  <div class = "description2"><p>Descriptions for isotype</p></div>
-
-  <div class = "isotype_dot">
-    <div id="stacked_bar_chart"></div>
-      <script type="text/javascript">
-          var data_location = "data/COVID_19.csv"
-
-          // var spec2 = "js/stacked_bar_chart.vg.json";
-          var spec2 = "js/stacked_bar_chart.vg.json"
-
-          vegaEmbed('#stacked_bar_chart', spec2).then(function(result) {
-              // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-          }).catch(console.error);
-      </script>
+  <div class = "description2">
+    <t><b>Meat consumption by kg per capita</b><br></t>
+    <dl>
+      <dt>&#127830;<p1 style = "color:red;"><b>Highest Meat consumption</b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="red">Denmark</mark> has the highest Meat consumption per capita which is <mark class ="red">
+        145.9kg</mark>.<br></p2></dd>
+      <dt>&#127830;<p1 style = "color:green;"><b>Lowest Meat consumption</b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="green">Bhutan</mark> has the lowest Meat consumption per capita which is <mark class ="green">3kg</mark>.<br></p2></dd>
+    </dl>
   </div>
 
+  <!-- Isotype Dot plot -->
+  <div class = "isotype_dot">
+  </div>
+
+  <!-- Bar plot -->
   <div class = "barchart1"> 
     <div id="stacked_bar_chart"></div>
       <script type="text/javascript">
@@ -94,8 +94,31 @@
       </script>
   </div>
 
-  <div class = "description3"><p>Descriptions for barchart1</p></div>
-  
+  <div class = "description3">
+    <t><b>Ratio of males for each female</b><br></t>
+    <dl>
+      <dt>&#128697;<p1 style = "color:red;"><b>Highest ratio of males for each female</b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="red">Qatar</mark> has the highest ratio of males for each female which is <mark class ="red">
+        3.39</mark>.<br></p2></dd>
+      <dt>&#128698;<p1 style = "color:green;"><b>Lowest ratio of males for each female</b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="green">Djibouti</mark> has the lowest ratio of males for each female which is <mark class ="green">
+        0.83</mark>.<br></p2></dd>
+    </dl>
+  </div>
+
+  <div class = "description5">
+    <t><b>Population Growth</b><br></t>
+    <dl>
+      <dt>&#128101;<p1 style = "color:red;"><b>Highest population growth rate</b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="red">Oman</mark> has the highest population growth rate which is <mark class ="red">
+        9.13</mark>.<br></p2></dd>
+      <dt>&#128101;<p1 style = "color:green;"><b>Lowest population growth rate</b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="green">Latvia</mark> has the lowest population growth rate which is <mark class ="green">
+        -1.6</mark>.<br></p2></dd>
+    </dl>
+  </div>
+
+  <!-- Bar plot -->
   <div class = "barchart2"> 
     
   </div>
