--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <p2><b>&#128308; Median age   &#128309; Life expectancy</b><br></p2>
     <div id="dot_plot"></div>
     <div>
+      <p2>Page</p2>
       <input id=lifeNext type=number min=1 max=6 value = 1>
       <button onclick="decrement_1()">Prev</button>
       <button onclick="increment_1()">Next</button>
@@ -121,6 +122,7 @@
   <div class = "barchart1">
     <t><b>Sex ratio</b><br></t>
     <div>
+      <p2>Page</p2>
       <input id=SexRatioNext type=number min=1 max=7 value = 1>
       <button onclick="decrement_2()">Prev</button>
       <button onclick="increment_2()">Next</button>
@@ -178,6 +180,7 @@
   <div class = "barchart2"> 
     <t><b>Population Growth Chart</b><br></t>
     <div>
+      <p2>Page</p2>
       <input id=PopulationNext type=number min=1 max=8 value = 1>
       <button onclick="decrement_3()">Prev</button>
       <button onclick="increment_3()">Next</button>
