--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
 
   <div class = "description1">
-    <t><b>Suicide rate as per data published by the World Health Organization (WHO)</b><br></t>
+    <t><b>Suicide rate</b><br><p1>published by the World Health Organization (WHO)</p1></t>
     <dl>
       <dt>&#128128;<p1 style = "color:red;"><b>Highest Suicide rate</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="red">Guyana</mark> has the highest suicide rate which is <mark class ="red">30.2</mark>.<br></p2></dd>
