--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
     <h2>(2020)</h2>
   </div>
 
-  <div class="choropleth_map">
+  <div class="srHead">
     <t><b>World Suicide rate</b><br></t>
+  </div>
+
+  <div class="choropleth_map">
+    <t><b>World Suicide rate Map</b><br></t>
     <div id="choropleth_map"></div>
       <script type="text/javascript">
 
@@ -47,9 +51,13 @@
     </dl>
   </div>
 
+  <div class="leHead">
+    <t><b>Life expectancy</b><br></t>
+  </div>
+
   <div class = "description4">
     <t><b>Life expectancy</b><br></t>
-    <p2>Life expectancy is a statistical measure of the average (see below) time an organism is expected to live, based on the year of its birth, its current age, and other demographic factors including gender.</p2>
+    <p2>Life expectancy is a statistical measure of the average (see below) time an <br> organism is expected to live, based on the year of its birth, its current age,<br> and other demographic factors including gender. Life expectancy is calculated <br>using current age-specific mortality rates of the particular year of interest.</p2>
     <dl>
       <dt>&#23551; <p1 style = "color:red;"><b>Highest life expectancy</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="red">Hong Kong</mark> has the highest life expectancy which is <mark class ="red">
@@ -78,6 +86,10 @@
     </script>
   </div>
   
+  <div class="mcHead">
+    <t><b>Meat consumption</b><br></t>
+  </div>
+
   <div class = "description2">
     <t><b>Meat consumption by kg per capita</b><br></t>
     <dl>
@@ -105,6 +117,10 @@
       meat();
     </script>
     </div> 
+  </div>
+
+  <div class="srtHead">
+    <t><b>Sex ratio</b><br></t>
   </div>
 
   <!-- Bar plot -->
@@ -138,6 +154,10 @@
       <dd><p2>&#9733; <mark class ="green">Djibouti</mark> has the lowest ratio of males for each female which is <mark class ="green">
         0.83</mark>.<br></p2></dd>
     </dl>
+  </div>
+
+  <div class="pgHead">
+    <t><b>Population Growth</b><br></t>
   </div>
 
   <div class = "description5">
