fix: improved layout

--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
   </div>
 
   <div class = "description1">
-    <t><b>Suicide rate</b><br><p1>published by the World Health Organization (WHO)</p1></t>
+    <t><b>Suicide rate published by the World Health Organization (WHO)</b><br></t>
+    <p2>Suicide is calculated by number of suicide deaths in a year, divided by the population<br> and multiplied by 100 000. High-income countries have systems 
+      in place for collecting information on causes of death in the population. 
+      Many low- and middle-income <br>countries do not have such systems, and the numbers of deaths from specific <br>causes have to be estimated from incomplete data. </p2>
     <dl>
       <dt>&#128128;<p1 style = "color:red;"><b>Highest Suicide rate</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="red">Guyana</mark> has the highest suicide rate which is <mark class ="red">30.2</mark>.<br></p2></dd>
       <dt>&#128128;<p1 style = "color:green;"><b>Lowest Suicide rate</b><br></p1></dt>
-      <dd><p2>&#9733; <mark class ="green">Jamaica</mark> has the lowest suicide rate which is <mark class ="green">2</mark>.<br></p2></dd>
+      <dd><p2>&#9733; <mark class ="green">Barbados</mark> has the lowest suicide rate which is <mark class ="green">0.4</mark>.<br></p2></dd>
       <dt>&#128128;<p1 style = "color:darkorchid;"><b>Summary</b><br></p1></dt>
       <dd><p2>Overall <mark class ="green">South America</mark> shows a lower suicide rate, where countries except <br>
         <mark class ="red">Guyana, Bolivia </mark> and <mark class ="red">Uruguay</mark> have a suicide rate below 10. The region with <br>
@@ -92,6 +95,10 @@
 
   <div class = "description2">
     <t><b>Meat consumption by kg per capita</b><br></t>
+    <p2>The responsibility for global meat reduction falls overwhelmingly on the shoulders of the world’s 
+      richer countries. When we compare consumption across different countries, typically, 
+      the richer the country or territory is, the more meat it consumes. Countries in North America,
+       South America, Oceania and North Asia consume more meat than the other regions. </p2>
     <dl>
       <dt>&#127830;<p1 style = "color:red;"><b>Highest Meat consumption</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="red">Denmark</mark> has the highest Meat consumption per capita which is <mark class ="red">
@@ -146,6 +153,8 @@
 
   <div class = "description3">
     <t><b>Ratio of males for each female</b><br></t>
+    <p2>The chart represents the human sex ratio over a country or region, by <br>
+      denoting the ratio of males for each female in a population. The sex ratio at birth is not equal: in every country births are male-biased. There are biological reasons why there are slightly more boys born every year than girls. The ‘natural’ sex ratio at birth is around 105 boys per 100 girls (ranging from around 103 to 107 boys).</p2>
     <dl>
       <dt>&#128697;<p1 style = "color:red;"><b>Highest ratio of males for each female</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="red">Qatar</mark> has the highest ratio of males for each female which is <mark class ="red">
@@ -162,13 +171,14 @@
 
   <div class = "description5">
     <t><b>Population Growth</b><br></t>
+    <p2>The chart shows the population growth rate and its projections over the world's countries.</p2>
     <dl>
       <dt>&#128101;<p1 style = "color:red;"><b>Highest population growth rate</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="red">Oman</mark> has the highest population growth rate which is <mark class ="red">
-        9.13</mark>.<br></p2></dd>
+        9.13</mark>.<br>The annual growth rate in Oman has been extremely high in recent years due to a huge influx of immigrants. There are so many, that they nearly make up half of the modern population.</p2></dd>
       <dt>&#128101;<p1 style = "color:green;"><b>Lowest population growth rate</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="green">Latvia</mark> has the lowest population growth rate which is <mark class ="green">
-        -1.6</mark>.<br></p2></dd>
+        -1.6</mark>.<br>In the last three decades, Latvia has experienced a drastic decrease in its population. First came the collapse of the USSR and a mass emigration of Russians in the 1990s. Then, EU membership in 2004 led to another drop in population through migration. After that, the recession in 2009 and a resultant exodus of people.</p2></dd>
     </dl>
   </div>
 
