--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
   <!-- Isotype Dot plot -->
   <div class = "isotype_dot">
-    <t><b>Meat consumption</b><br></t>
+    <t><b>Meat consumption Chart</b><br></t>
     <div id="isotype_dot_plot"> 
     <script type="text/javascript">
       
@@ -166,11 +166,11 @@
   </div>
 
   <div class="pgHead">
-    <t><b>Population Growth</b><br></t>
+    <t><b>Population growth</b><br></t>
   </div>
 
   <div class = "description5">
-    <t><b>Population Growth</b><br></t>
+    <t><b>Population growth</b><br></t>
     <p2>The chart shows the population growth rate and its projections over the world's countries.</p2>
     <dl>
       <dt>&#128101;<p1 style = "color:red;"><b>Highest population growth rate</b><br></p1></dt>
@@ -184,7 +184,7 @@
 
   <!-- Bar plot -->
   <div class = "barchart2"> 
-    <t><b>Population Growth Chart</b><br></t>
+    <t><b>Population growth Chart</b><br></t>
     
     <div id="barchart"> 
     <script type="text/javascript">
