Fix: filtered values

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="srHead">
-    <t><b>World Suicide rate</b><br></t>
+    <t1><b>World Suicide rate</b><br></t1>
   </div>
 
   <div class="choropleth_map">
@@ -55,7 +55,7 @@
   </div>
 
   <div class="leHead">
-    <t><b>Life expectancy</b><br></t>
+    <t1><b>Life expectancy</b><br></t1>
   </div>
 
   <div class = "description4">
@@ -90,7 +90,7 @@
   </div>
   
   <div class="mcHead">
-    <t><b>Meat consumption</b><br></t>
+    <t1><b>Meat consumption</b><br></t1>
   </div>
 
   <div class = "description2">
@@ -127,7 +127,7 @@
   </div>
 
   <div class="srtHead">
-    <t><b>Sex ratio</b><br></t>
+    <t1><b>Sex ratio</b><br></t1>
   </div>
 
   <!-- Bar plot -->
@@ -166,7 +166,7 @@
   </div>
 
   <div class="pgHead">
-    <t><b>Population growth</b><br></t>
+    <t1><b>Population growth</b><br></t1>
   </div>
 
   <div class = "description5">
