Fix: red-green colour

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
       in place for collecting information on causes of death in the population. 
       Many low- and middle-income <br>countries do not have such systems, and the numbers of deaths from specific <br>causes have to be estimated from incomplete data. </p2>
     <dl>
-      <dt>&#128128;<p1 style = "color:red;"><b>Highest Suicide rate</b><br></p1></dt>
-      <dd><p2>&#9733; <mark class ="red">Guyana</mark> has the highest suicide rate which is <mark class ="red">30.2</mark>.<br></p2></dd>
+      <dt>&#128128;<p1 style = "color:blue;"><b>Highest Suicide rate</b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="blue">Guyana</mark> has the highest suicide rate which is <mark class ="blue">30.2</mark>.<br></p2></dd>
       <dt>&#128128;<p1 style = "color:green;"><b>Lowest Suicide rate</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="green">Barbados</mark> has the lowest suicide rate which is <mark class ="green">0.4</mark>.<br></p2></dd>
       <dt>&#128128;<p1 style = "color:darkorchid;"><b>Summary</b><br></p1></dt>
       <dd><p2>Overall <mark class ="green">South America</mark> shows a lower suicide rate, where countries except <br>
-        <mark class ="red">Guyana, Bolivia </mark> and <mark class ="red">Uruguay</mark> have a suicide rate below 10. The region with <br>
-        the highest suicide rate is <mark class ="red">Russia</mark> and its nearby countries including <br>
-        <mark class ="red">Belarus</mark> and <mark class ="red">Kazakhstan</mark>, with suicide rates over 20. <br></p2></dd>
+        <mark class ="blue">Guyana, Bolivia </mark> and <mark class ="blue">Uruguay</mark> have a suicide rate below 10. The region with <br>
+        the highest suicide rate is <mark class ="blue">Russia</mark> and its nearby countries including <br>
+        <mark class ="blue">Belarus</mark> and <mark class ="blue">Kazakhstan</mark>, with suicide rates over 20. <br></p2></dd>
     </dl>
   </div>
 
@@ -62,8 +62,8 @@
     <t><b>Life expectancy</b><br></t>
     <p2>Life expectancy is a statistical measure of the average (see below) time an <br> organism is expected to live, based on the year of its birth, its current age,<br> and other demographic factors including gender. Life expectancy is calculated <br>using current age-specific mortality rates of the particular year of interest.</p2>
     <dl>
-      <dt>&#23551; <p1 style = "color:red;"><b>Highest life expectancy</b><br></p1></dt>
-      <dd><p2>&#9733; <mark class ="red">Hong Kong</mark> has the highest life expectancy which is <mark class ="red">
+      <dt>&#23551; <p1 style = "color:blue;"><b>Highest life expectancy</b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="blue">Hong Kong</mark> has the highest life expectancy which is <mark class ="blue">
         84.7</mark>.<br></p2></dd>
       <dt>&#23551; <p1 style = "color:green;"><b>Lowest life expectancy</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="green">Central African Republic</mark> has the lowest life expectancy which is <mark class ="green">
@@ -101,6 +101,16 @@
       life2();
     </script>
   </div>
+
+  <div class = "description6">
+    <t><b>Highest overall life expectancy and median</b><br></t>
+    <p2></p2>
+    <dl>
+      <dt><p2>&#128308;</p2> <p1 style = "color:blue;"><b>Japan </b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="blue">Japan</mark> has the highest overall life expectancy and median 
+        having the <mark class ="blue"> highest median age</mark> and <mark class ="blue">second highest life expectancy</mark>.<br></p2></dd>
+    </dl>
+  </div>
   
   <div class="mcHead">
     <t1><b>Meat consumption</b><br></t1>
@@ -113,8 +123,8 @@
       the richer the country or territory is, the more meat it consumes. Countries in North America,
        South America, Oceania and North Asia consume more meat than the other regions. </p2>
     <dl>
-      <dt>&#127830;<p1 style = "color:red;"><b>Highest Meat consumption</b><br></p1></dt>
-      <dd><p2>&#9733; <mark class ="red">Denmark</mark> has the highest Meat consumption per capita which is <mark class ="red">
+      <dt>&#127830;<p1 style = "color:blue;"><b>Highest Meat consumption</b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="blue">Denmark</mark> has the highest Meat consumption per capita which is <mark class ="blue">
         145.9kg</mark>.<br></p2></dd>
       <dt>&#127830;<p1 style = "color:green;"><b>Lowest Meat consumption</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="green">Bhutan</mark> has the lowest Meat consumption per capita which is <mark class ="green">3kg</mark>.<br></p2></dd>
@@ -169,8 +179,8 @@
     <p2>The chart represents the human sex ratio over a country or region, by <br>
       denoting the ratio of males for each female in a population. The sex ratio at birth is not equal: in every country births are male-biased. There are biological reasons why there are slightly more boys born every year than girls. The ‘natural’ sex ratio at birth is around 105 boys per 100 girls (ranging from around 103 to 107 boys).</p2>
     <dl>
-      <dt>&#128697;<p1 style = "color:red;"><b>Highest ratio of males for each female</b><br></p1></dt>
-      <dd><p2>&#9733; <mark class ="red">Qatar</mark> has the highest ratio of males for each female which is <mark class ="red">
+      <dt>&#128697;<p1 style = "color:blue;"><b>Highest ratio of males for each female</b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="blue">Qatar</mark> has the highest ratio of males for each female which is <mark class ="blue">
         3.39</mark>.<br></p2></dd>
       <dt>&#128698;<p1 style = "color:green;"><b>Lowest ratio of males for each female</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="green">Djibouti</mark> has the lowest ratio of males for each female which is <mark class ="green">
@@ -186,8 +196,8 @@
     <t><b>Population growth</b><br></t>
     <p2>The chart shows the population growth rate and its projections over the world's countries.</p2>
     <dl>
-      <dt>&#128101;<p1 style = "color:red;"><b>Highest population growth rate</b><br></p1></dt>
-      <dd><p2>&#9733; <mark class ="red">Oman</mark> has the highest population growth rate which is <mark class ="red">
+      <dt>&#128101;<p1 style = "color:blue;"><b>Highest population growth rate</b><br></p1></dt>
+      <dd><p2>&#9733; <mark class ="blue">Oman</mark> has the highest population growth rate which is <mark class ="blue">
         9.13</mark>.<br>The annual growth rate in Oman has been extremely high in recent years due to a huge influx of immigrants. There are so many, that they nearly make up half of the modern population.</p2></dd>
       <dt>&#128101;<p1 style = "color:green;"><b>Lowest population growth rate</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="green">Latvia</mark> has the lowest population growth rate which is <mark class ="green">
