--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <div class="head">
     <h1>World Data by country </h1>
     <h2>(2020)</h2>
+    
   </div>
 
   <div class="srHead">
@@ -37,19 +38,19 @@
   </div>
 
   <div class = "description1">
-    <t><b>Suicide rate published by the World Health Organization (WHO)</b><br></t>
-    <p2>Suicide is calculated by number of suicide deaths in a year, divided by the population<br> and multiplied by 100 000. High-income countries have systems 
-      in place for collecting information on causes of death in the population. 
-      Many low- and middle-income <br>countries do not have such systems, and the numbers of deaths from specific <br>causes have to be estimated from incomplete data. </p2>
+    <t><b>Suicide rate published by the WHO</b><br></t>
+    <p2>Suicide is calculated by number of suicide deaths in a year, divided by <br>the population and multiplied by 100 000. High-income countries<br> have systems 
+      in place for collecting information on causes of death <br>in the population. 
+      Many low- and middle-income countries do not have <br>such systems, and the numbers of deaths from specific causes have to <br>be estimated from incomplete data. </p2>
     <dl>
       <dt>&#128128;<p1 style = "color:blue;"><b>Highest Suicide rate</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="blue">Guyana</mark> has the highest suicide rate which is <mark class ="blue">30.2</mark>.<br></p2></dd>
       <dt>&#128128;<p1 style = "color:green;"><b>Lowest Suicide rate</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="green">Barbados</mark> has the lowest suicide rate which is <mark class ="green">0.4</mark>.<br></p2></dd>
       <dt>&#128128;<p1 style = "color:darkorchid;"><b>Summary</b><br></p1></dt>
-      <dd><p2>Overall <mark class ="green">South America</mark> shows a lower suicide rate, where countries except <br>
-        <mark class ="blue">Guyana, Bolivia </mark> and <mark class ="blue">Uruguay</mark> have a suicide rate below 10. The region with <br>
-        the highest suicide rate is <mark class ="blue">Russia</mark> and its nearby countries including <br>
+      <dd><p2>Overall <mark class ="green">South America</mark> shows a lower suicide rate, where countries <br>except 
+        <mark class ="blue">Guyana, Bolivia </mark> and <mark class ="blue">Uruguay</mark> have a suicide rate below 10. <br>The region with 
+        the highest suicide rate is <mark class ="blue">Russia</mark> and its nearby <br>countries including 
         <mark class ="blue">Belarus</mark> and <mark class ="blue">Kazakhstan</mark>, with suicide rates over 20. <br></p2></dd>
     </dl>
   </div>
@@ -64,10 +65,7 @@
     <dl>
       <dt>&#23551; <p1 style = "color:blue;"><b>Highest life expectancy</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="blue">Hong Kong</mark> has the highest life expectancy which is <mark class ="blue">
-        84.7</mark>.<br></p2></dd>
-      <dt>&#23551; <p1 style = "color:green;"><b>Lowest life expectancy</b><br></p1></dt>
-      <dd><p2>&#9733; <mark class ="green">Central African Republic</mark> has the lowest life expectancy which is <mark class ="green">
-        52.8</mark>.<br></p2></dd>
+        84.7. </mark> Their<br> leading longevity is the result of fewer diseases of poverty while<br> suppressing the diseases of affluence. A unique combination of <br>economic prosperity and low levels of smoking with development <br>contributed to this achievement.<br></p2></dd>
     </dl>
   </div>
 
@@ -108,7 +106,10 @@
     <dl>
       <dt><p2>&#128308;</p2> <p1 style = "color:blue;"><b>Japan </b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="blue">Japan</mark> has the highest overall life expectancy and median 
-        having the <mark class ="blue"> highest median age</mark> and <mark class ="blue">second highest life expectancy</mark>.<br></p2></dd>
+        ,the <br><mark class ="blue"> highest median age</mark> and <mark class ="blue">second highest life expectancy</mark>. <br>Japanese are known to have
+         a healthy diet and lifestyle, practice <br>of good hygiene and their decreased cerebrovascular diseases <br>benefited their overall life expctancy. Adding on 
+         with a low ferility<br> rate, it becomes the country with the highest median age.<br></p2></dd>
+
     </dl>
   </div>
   
@@ -118,16 +119,16 @@
 
   <div class = "description2">
     <t><b>Meat consumption by kg per capita</b><br></t>
-    <p2>The responsibility for global meat reduction falls overwhelmingly on the shoulders of the world’s 
-      richer countries. When we compare consumption across different countries, typically, 
-      the richer the country or territory is, the more meat it consumes. Countries in North America,
-       South America, Oceania and North Asia consume more meat than the other regions. </p2>
+    <p2>The responsibility for global meat reduction falls overwhelmingly <br>on the shoulders of the world’s 
+      richer countries. When we compare <br>consumption across different countries, typically, 
+      the richer the country <br>or territory is, the more meat it consumes. Countries in North America,
+      <br>South America, Oceania and North Asia consume more meat than the<br> other regions. </p2>
     <dl>
       <dt>&#127830;<p1 style = "color:blue;"><b>Highest Meat consumption</b><br></p1></dt>
-      <dd><p2>&#9733; <mark class ="blue">Denmark</mark> has the highest Meat consumption per capita which is <mark class ="blue">
+      <dd><p2>&#9733; <mark class ="blue">Denmark</mark> has the highest Meat consumption per capita <br>which is <mark class ="blue">
         145.9kg</mark>.<br></p2></dd>
       <dt>&#127830;<p1 style = "color:green;"><b>Lowest Meat consumption</b><br></p1></dt>
-      <dd><p2>&#9733; <mark class ="green">Bhutan</mark> has the lowest Meat consumption per capita which is <mark class ="green">3kg</mark>.<br></p2></dd>
+      <dd><p2>&#9733; <mark class ="green">Bhutan</mark> has the lowest Meat consumption per capita which <br>is <mark class ="green">3kg</mark>.<br></p2></dd>
     </dl>
   </div>
 
@@ -177,7 +178,7 @@
   <div class = "description3">
     <t><b>Ratio of males for each female</b><br></t>
     <p2>The chart represents the human sex ratio over a country or region, by <br>
-      denoting the ratio of males for each female in a population. The sex ratio at birth is not equal: in every country births are male-biased. There are biological reasons why there are slightly more boys born every year than girls. The ‘natural’ sex ratio at birth is around 105 boys per 100 girls (ranging from around 103 to 107 boys).</p2>
+      denoting the ratio of males for each female in a population. The sex <br>ratio at birth is not equal: in every country births are male-biased. <br>There are biological reasons why there are slightly more boys born <br>every year than girls. The ‘natural’ sex ratio at birth is around 105 boys <br>per 100 girls (ranging from around 103 to 107 boys).</p2>
     <dl>
       <dt>&#128697;<p1 style = "color:blue;"><b>Highest ratio of males for each female</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="blue">Qatar</mark> has the highest ratio of males for each female which is <mark class ="blue">
@@ -194,14 +195,16 @@
 
   <div class = "description5">
     <t><b>Population growth</b><br></t>
-    <p2>The chart shows the population growth rate and its projections over the world's countries.</p2>
+    <p2>The chart shows the population growth rate and its projections over the <br>world's countries </p2>
+    <p2>that are below 0.07 and above 2.8. The factors affecting it <br>are emigration and falling 
+      mortality rate (imbalance between births and deaths).<br></p2>
     <dl>
       <dt>&#128101;<p1 style = "color:blue;"><b>Highest population growth rate</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="blue">Oman</mark> has the highest population growth rate which is <mark class ="blue">
-        9.13</mark>.<br>The annual growth rate in Oman has been extremely high in recent years due to a huge influx of immigrants. There are so many, that they nearly make up half of the modern population.</p2></dd>
+        9.13</mark>.<br>The annual growth rate in Oman has been extremely high in recent<br> years due to a huge influx of immigrants. There are so many, that<br> they nearly make up half of the modern population.</p2></dd>
       <dt>&#128101;<p1 style = "color:green;"><b>Lowest population growth rate</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="green">Latvia</mark> has the lowest population growth rate which is <mark class ="green">
-        -1.6</mark>.<br>In the last three decades, Latvia has experienced a drastic decrease in its population. First came the collapse of the USSR and a mass emigration of Russians in the 1990s. Then, EU membership in 2004 led to another drop in population through migration. After that, the recession in 2009 and a resultant exodus of people.</p2></dd>
+        -1.6</mark>.<br>In the last three decades, Latvia has experienced a drastic decrease <br>in its population. First came the collapse of the USSR and a mass <br>emigration of Russians in the 1990s. Then, EU membership in 2004 led <br>to another drop in population through migration. After that, the recession <br>in 2009 and a resultant exodus of people.</p2></dd>
     </dl>
   </div>
 
