--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
   <div class = "description5">
     <t><b>Population growth</b><br></t>
     <p2>The chart shows the population growth rate and its projections over the <br>world's countries </p2>
-    <p2>that are below 0.07 and above 2.8. The factors affecting it <br>are emigration and falling 
-      mortality rate (imbalance between births and deaths).<br></p2>
+    <p2>that are below 0.07 and above 2.8. <br></p2>
     <dl>
       <dt>&#128101;<p1 style = "color:blue;"><b>Highest population growth rate</b><br></p1></dt>
       <dd><p2>&#9733; <mark class ="blue">Oman</mark> has the highest population growth rate which is <mark class ="blue">
