--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <div class="grid-container">
 
   <div class="head">
-    <h1>World Data by country </h1>
-    <h2>(2020)</h2>
+    <h1><b>World Data by country</b> </h1>
+    <h2>"2020"</h2>
     
   </div>
 
@@ -134,7 +134,7 @@
 
   <!-- Isotype Dot plot -->
   <div class = "isotype_dot">
-    <t><b>Meat consumption Chart</b><br></t>
+    <t><b>Top 30 meat consumptions</b><br></t>
     <div id="isotype_dot_plot"> 
     <script type="text/javascript">
       
